--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "tierlist-next",
   "version": "0.1.0",
   "private": true,
+  "type": "commonjs",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -9,6 +10,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^5.11.0",
+    "@vercel/postgres": "^0.7.2",
     "next": "14.1.2",
     "react": "^18",
     "react-beautiful-dnd": "^13.1.1",
@@ -23,6 +26,7 @@
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "postcss": "^8",
+    "prisma": "^5.11.0",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
