--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@prisma/client": "^5.11.0",
     "@vercel/postgres": "^0.7.2",
+    "html2canvas": "^1.4.1",
     "next": "14.1.2",
     "react": "^18",
     "react-beautiful-dnd": "^13.1.1",
